docs/pss-inventory/retrieved-mdapi/unpackaged/objects/sfsp__SalesBoundary__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__ContainerSet__c</fullName>
        <label>Container Set</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsp__IncludePoints__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IncludePoints</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Plan</label>
        <referenceTo>sfsp__SalesPlan__c</referenceTo>
        <relationshipLabel>Sales Boundaries</relationshipLabel>
        <relationshipName>SalesBoundaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Boundary</label>
    <nameField>
        <label>Sales Boundary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Boundaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>